# SocketProgramming

./: .gitignore  CMakeLists.txt  README.md  build.sh
CAN/: CMakeLists.txt  filtered_receiver.c  receiver.c  transmitter.c
Netlink/: CMakeLists.txt  Makefile  kernel_client.c  user_client.c
TCP/: CMakeLists.txt  client_tcp.c  file_client.c  file_receiver.c  file_sender.c  file_server.c  multiclient_server_tcp.c  server_tcp.c
UDP/: CMakeLists.txt  client_udp.c  server_udp.c
Unix/: CMakeLists.txt  client_unix.c  server_unix.c
Virtio/: CMakeLists.txt  vsock_client.c  vsock_server.c
